<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Walarm</string>

    <string name="noti_title">Walarm !!</string>
    <string name="noti_msg">It is your Alarm Time</string>

    <string name="day_sunday">S</string>
    <string name="day_monday">M</string>
    <string name="day_tuesday">T</string>
    <string name="day_wednesday">W</string>
    <string name="day_thursday">T</string>
    <string name="day_friday">F</string>
    <string name="day_saturday">S</string>

    <string name="set_cancel">Cancel</string>
    <string name="set_delete">Delete</string>
    <string name="set_save">Save</string>
    <string name="set_name">Name</string>
    <string name="set_hint">ex) School</string>
    <string name="set_vibe">Vibe</string>
    <string name="set_ring">Ring</string>

    <string name="dlg_yes">Yes</string>
    <string name="dlg_no">No</string>
    <string name="dlg_cancel">Do you want to exit without saving?</string>
    <string name="dlg_delete">Do you want to delete this alarm?</string>

    <string name="toast_back">You can exit, if you press \'back\' button again.</string>
    <string name="toast_days">Please select at least one day of the week.</string>
    <string name="toast_set"> left to fire the alarm.</string>
    <string name="toast_day">d</string>
    <string name="toast_hour">h</string>
    <string name="toast_minute">m</string>

    <string name="notices_default_style" translatable="false">
        p.license {
        background:grey;
        }
        body {
        font-family: sans-serif;
        overflow-wrap: break-word;
        }
        pre {
        background-color: #eeeeee;
        padding: 1em;
        white-space: pre-wrap;
        }
    </string>
    <string name="notices_title">Open Source License</string>
    <string name="notices_close">Close</string>
    <string name="title_activity_ring_set">RingSetActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_empty">There is no alarm.\nPlease add new one.</string>

    <string name="main_menu">Menu</string>
    <string name="main_add">Add Alarm</string>
    <string name="main_ring">Ring Tone Setting</string>
    <string name="main_help">Help</string>
    <string name="main_info">Information</string>

</resources>
