<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff000000" />


    <com.gohn.walarm.Extention.TextViewEx
        android:id="@+id/text_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/main_empty"
        android:textSize="@dimen/set_text" />

    <TextView
        android:id="@+id/text_menu"
        style="@style/menu_labels_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="90dp"
        android:text="@string/main_menu" />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fam_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="7dp"
        fab:fab_addButtonColorNormal="#00ffffff"
        fab:fab_addButtonColorPressed="#00ffffff"
        fab:fab_addButtonPlusIconColor="#00ffffff"
        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/primary"
            fab:fab_colorPressed="@color/primary_pressed"
            fab:fab_icon="@drawable/ic_info"
            fab:fab_title="@string/main_info" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/primary"
            fab:fab_colorPressed="@color/primary_pressed"
            fab:fab_icon="@drawable/ic_help"
            fab:fab_title="@string/main_help" />

        <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
        <!--android:id="@+id/fab_option"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--fab:fab_icon="@drawable/ic_option"-->
        <!--fab:fab_colorNormal="@color/primary"-->
        <!--fab:fab_colorPressed="@color/primary_pressed" />-->

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/primary"
            fab:fab_colorPressed="@color/primary_pressed"
            fab:fab_icon="@drawable/ic_note"
            fab:fab_title="@string/main_ring" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/primary"
            fab:fab_colorPressed="@color/primary_pressed"
            fab:fab_icon="@drawable/ic_add"
            fab:fab_title="@string/main_add" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_menu"
        fab:fab_colorNormal="@color/primary"
        fab:fab_colorPressed="@color/primary_pressed"
        fab:fab_colorRipple="@color/ripple" />

</RelativeLayout>